version/0.4/_sources/api/ansys/rocky/core/_api_stubs/rocky30/plugins/api/ra_particle_assembly/RAParticleAssemblyCustom.rst.txt






:class:`RAParticleAssemblyCustom`
=================================


.. py:class:: ansys.rocky.core._api_stubs.rocky30.plugins.api.ra_particle_assembly.RAParticleAssemblyCustom(id: str, model_id: Optional[str] = ...)

   Bases: :py:obj:`ansys.rocky.core._api_stubs.plugins10.plugins.api.api_element_item.ApiElementItem`





.. py:currentmodule:: RAParticleAssemblyCustom

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~GetWrappedClass`
            - 
          * - :py:attr:`~GetClassName`
            - 


   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~GetArea`
            - 
          * - :py:attr:`~SetArea`
            - 
          * - :py:attr:`~GetCenterOfMass`
            - 
          * - :py:attr:`~SetCenterOfMass`
            - 
          * - :py:attr:`~GetEnabled`
            - 
          * - :py:attr:`~SetEnabled`
            - 
          * - :py:attr:`~GetGeometricCenter`
            - 
          * - :py:attr:`~SetGeometricCenter`
            - 
          * - :py:attr:`~GetInertiaXAxis`
            - 
          * - :py:attr:`~SetInertiaXAxis`
            - 
          * - :py:attr:`~GetInertiaYAxis`
            - 
          * - :py:attr:`~SetInertiaYAxis`
            - 
          * - :py:attr:`~GetInertiaZAxis`
            - 
          * - :py:attr:`~SetInertiaZAxis`
            - 
          * - :py:attr:`~GetMass`
            - 
          * - :py:attr:`~SetMass`
            - 
          * - :py:attr:`~GetMomentOfInertia`
            - 
          * - :py:attr:`~SetMomentOfInertia`
            - 
          * - :py:attr:`~GetPorosity`
            - 
          * - :py:attr:`~SetPorosity`
            - 
          * - :py:attr:`~GetVolume`
            - 
          * - :py:attr:`~SetVolume`
            - 








Import detail
-------------

.. code-block:: python

    from ansys.rocky.core._api_stubs.rocky30.plugins.api.ra_particle_assembly import RAParticleAssemblyCustom



Method detail
-------------

.. py:method:: GetWrappedClass() -> type[rocky30.models.particle.particle_assembly.ParticleAssemblyCustom]
   :classmethod:


.. py:method:: GetClassName()
   :classmethod:


.. py:method:: GetArea(unit: Optional[str] = ...) -> float

.. py:method:: SetArea(value: Union[str, float], unit: Optional[str] = ...) -> None

.. py:method:: GetCenterOfMass(unit: Optional[str] = ...) -> List[float]

.. py:method:: SetCenterOfMass(values: collections.abc.Sequence[Union[str, float]], unit: Optional[str] = ...) -> None

.. py:method:: GetEnabled() -> bool

.. py:method:: SetEnabled(value: bool) -> None

.. py:method:: GetGeometricCenter(unit: Optional[str] = ...) -> List[float]

.. py:method:: SetGeometricCenter(values: collections.abc.Sequence[Union[str, float]], unit: Optional[str] = ...) -> None

.. py:method:: GetInertiaXAxis(unit: Optional[str] = ...) -> List[float]

.. py:method:: SetInertiaXAxis(values: collections.abc.Sequence[Union[str, float]], unit: Optional[str] = ...) -> None

.. py:method:: GetInertiaYAxis(unit: Optional[str] = ...) -> List[float]

.. py:method:: SetInertiaYAxis(values: collections.abc.Sequence[Union[str, float]], unit: Optional[str] = ...) -> None

.. py:method:: GetInertiaZAxis(unit: Optional[str] = ...) -> List[float]

.. py:method:: SetInertiaZAxis(values: collections.abc.Sequence[Union[str, float]], unit: Optional[str] = ...) -> None

.. py:method:: GetMass(unit: Optional[str] = ...) -> float

.. py:method:: SetMass(value: Union[str, float], unit: Optional[str] = ...) -> None

.. py:method:: GetMomentOfInertia(unit: Optional[str] = ...) -> List[float]

.. py:method:: SetMomentOfInertia(values: collections.abc.Sequence[Union[str, float]], unit: Optional[str] = ...) -> None

.. py:method:: GetPorosity(unit: Optional[str] = ...) -> float

.. py:method:: SetPorosity(value: Union[str, float], unit: Optional[str] = ...) -> None

.. py:method:: GetVolume(unit: Optional[str] = ...) -> float

.. py:method:: SetVolume(value: Union[str, float], unit: Optional[str] = ...) -> None




